# template-service

./: .gitignore  ChangeLog.md  README.md  prototype-2-service.cabal  template-service.cabal
example-json/: example-example.json  example-template.json
src/: Main.hs  Prototype.hs
src/Plowtech/Records/: FullTagKey.hs  OnpingTagCombined.hs
src/Plowtech/Service/: Types.hs
src/Prototype/: Internal.hs
static/: README.md  common.js  editor.html  editor.js  index.html  validator.html  validator.js
test/: PrototypeSpec.hs
