Name:                   prototype2-service
Version:                0.0.0
Author:                 Kevin Cotrone <kevincotrone@gmail.com>
Maintainer:             Kevin Cotrone <kevincotrone@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-Source-Files:     README.md, ChangeLog.md

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Prototype
  Other-Modules:        Prototype.Internal
  Build-Depends:        base >= 4 && < 5

executable prototype-2-service
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  main-is:              Main.hs
  build-depends:        base >= 4.7 && < 4.9
                      , vinyl >= 0.5 && < 0.6
                      , aeson == 0.8.0.2
                      , lens
                      , text >= 1.2  && < 1.3
                      , aeson == 0.8.0.2
                      , servant >= 0.4 && < 0.5
                      , servant-server >= 0.4 && < 0.5
                      , warp >= 3.0 && < 3.1
                      , wai >= 3.0 && < 3.1
                      , either >= 4.4 && < 4.5
                      , cereal >= 0.4 && <0.5
                      , simple-store >= 0.3.1 && < 0.4
                      , prototype2-vinyl
                      , transformers


Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Source-Repository head
  Type:                 git
--  Location:             
